# EagleNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/EagleNetwork/: ResourceInitializer.hh  Result.hh  Socket.hh  Utilities.hh
include/EagleNetwork/Platform/: PlatofrmDefs.hh
test/: CMakeLists.txt  PlatformError.cc  ResourceInitializerTests.cc  ResultTests.cc  SocketTests.cc
